2006-01-30  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/gnu/java/security/util/TestOfPrime2.java: New file.
	Fixed Copyright holder.

2006-01-29  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/javax/crypto: Moved to gnu/testlet/gnu/javax/crypto.
	* gnu/testlet/java/security/sig:
	Moved to gnu/testlet/gnu/java/security/sig.
	* gnu/testlet/java/security/key.java:
	Moved to gnu/testlet/gnu/java/security/key.
	* gnu/testlet/java/security/jce:
	Moved to gnu/testlet/gnu/java/security/jce.
	* gnu/testlet/java/security/hash:
	Moved to gnu/testlet/gnu/java/security/hash.

2006-01-28  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/event/SwingPropertyChangeSupport/hasListeners.java
	(test): Corrected test for null argument,
	* gnu/testlet/javax/swing/event/SwingPropertyChangeSupport/removePropertyChangeListener.java
	(test2): Likewise.

2006-01-28  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JList/AccessibleJList/AccessibleJListChild/getFont.java
	(test): Changed getBackground() --> getFont().

2006-01-28  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/UIManager/addPropertyChangeListener.java
	(test): Don't assume there are zero listeners at start of test,
	* gnu/testlet/javax/swing/UIManager/getPropertyChangeListeners.java
	(test): Likewise.

2006-01-29  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/javax/crypto/mac/TestOfHMacCloneability.java: New file.
	* gnu/testlet/javax/crypto/jce/TestOfMac.java (testEquality): Skip OMAC
	with null cipher.
	Use two MDGenerators directly instantiated.
	(testCloneability): Use a directly instantiaed MDGenerator.

2006-01-28  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/ViewportLayout/layoutContainer.java
	(testMinimumViewSize): New test.

2006-01-28  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/javax/crypto/sasl/TestOfClientFactory.java: New file.