@@ -1,3 +1,8 @@
+2006-01-29  Roman Kennke  <kennke@aicas.com>
+
+	* gnu/testlet/javax/swing/ScrollPaneLayout/minimumLayoutSize.java:
+	New test.
+
 2006-01-30  Raif S. Naffah  <raif@swiftdsl.com.au>
 
 	* gnu/testlet/gnu/java/security/util/TestOfPrime2.java: New file.
